--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://www.jashwanthbamidi.dev",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
